nfinx conf file to load app in Azure

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,14 +5,7 @@ events {
 http {
     # Upstream backend servers
     upstream backend {
-        least_conn;  # Use least connections load balancing algorithm
-        
-        # Node.js application servers with health check parameters
-        server node-app-1:3001 max_fails=2 fail_timeout=10s;
-        server node-app-2:3002 max_fails=2 fail_timeout=10s;
-        
-        # Keep connections alive
-        keepalive 32;
+        server backend-service:3001; # Points to K8s Service, which handles the 2 pods
     }
 
     # Logging
