routing logic updated to load frontend

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,73 +3,41 @@ events {
 }
 
 http {
-    # Upstream backend servers
+    # Define the Backend Group (Kubernetes Service)
     upstream backend {
-        server backend-service:3001; # Points to K8s Service, which handles the 2 pods
+        server backend-service:3001;
     }
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log warn;
+    # Define the Frontend Group (Kubernetes Service)
+    upstream frontend {
+        server frontend-service:3000;
+    }
 
-    # Server block
     server {
         listen 80;
-        server_name localhost;
 
-        # Client request timeout
-        client_body_timeout 60s;
-        client_header_timeout 60s;
-
-        # Proxy settings
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # API routes - proxy to backend
+        # 1. API Requests -> Go to Backend
         location /api/ {
             proxy_pass http://backend;
-            
-            # Retry on failure
-            proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
-            proxy_next_upstream_tries 2;
-            proxy_next_upstream_timeout 10s;
-            
-            # Add custom header to identify which server handled the request
-            add_header X-Served-By $upstream_addr always;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Health check endpoint
+        # 2. Health Check -> Go to Backend
         location /health {
             proxy_pass http://backend/health;
-            access_log off;
         }
 
-        # Nginx status endpoint (for monitoring)
-        location /nginx-status {
-            stub_status on;
-            access_log off;
-            allow 127.0.0.1;
-            allow 172.16.0.0/12;  # Docker network
-            deny all;
-        }
-
-        # Root endpoint
+        # 3. Everything else (Home Page) -> Go to React Frontend
         location / {
-            proxy_pass http://backend/;
-        }
-
-        # Error pages
-        error_page 502 503 504 /50x.html;
-        location = /50x.html {
-            return 503 '{"error": "Service temporarily unavailable", "message": "All backend servers are down"}';
-            add_header Content-Type application/json;
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            
+            # WebSocket support (Crucial for React "npm start")
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
